k8s/ai-platform/openwebui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
  namespace: openwebui
  labels:
    app: openwebui
    app.kubernetes.io/name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
        app.kubernetes.io/name: openwebui
    spec:
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:main@sha256:1a6399d237dc392a2313e0ca826020b3fd5d22536357840eb63393d18dc8b924
          resources:
            limits:
              memory: 512Mi
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: openwebui-data
              mountPath: /app/backend/data
      volumes:
        - name: openwebui-data
          hostPath:
            path: /config/openwebui-data
            type: DirectoryOrCreate
